Make device-list overflow visible on mobile. Fix link on hove

--- a/src/styles/popup/buttons.less
+++ b/src/styles/popup/buttons.less
@@ -25,12 +25,12 @@ a:visited {
         color: @color_green_tertiary;
     }
 
-    &:hover,
+    /* &:hover,
     &:active {
         &:after {
             border-color: @color_white;
         }
-    }
+    } */
 }
 
 a.button {
@@ -186,10 +186,11 @@ button {
             box-shadow: 2px 0 0 @color_green_tertiary inset;
 
             border-radius: 0px;
+            background: @color_landing;
         }
 
         &.disabled:hover {
-            background-color: white;
+            background: white;
         }
     }
 
